--- a/ui_status_dashboard.yaml
+++ b/ui_status_dashboard.yaml
@@ -168,7 +168,7 @@ views:
           - entity: device_tracker.barbaras_air
       - type: custom:simple-thermostat
         entity: climate.airco_woonkamer
-        step_size: '0.5'
+        step_size: "0.5"
         hide:
           temperature: false
           state: true
@@ -255,120 +255,7 @@ views:
         hours_to_show: 14000
         refresh_interval: 0
         title: Voordeur batterij
-  - title: vCenter
-    path: vcenter
-    badges: []
-    cards:
-      - type: entities
-        entities:
-          - entity: sensor.esxi_vm_homeassistant
-            name: Power State
-          - type: attribute
-            entity: sensor.esxi_vm_homeassistant
-            attribute: status
-            name: Status
-          - type: attribute
-            entity: sensor.esxi_vm_homeassistant
-            attribute: cpu_use_pct
-            name: CPU Usage
-            suffix: '%'
-          - type: attribute
-            entity: sensor.esxi_vm_homeassistant
-            attribute: memory_allocated_mb
-            name: Allocated RAM
-            suffix: MB
-          - type: attribute
-            entity: sensor.esxi_vm_homeassistant
-            attribute: memory_used_mb
-            name: Used RAM
-            suffix: MB
-          - type: attribute
-            entity: sensor.esxi_vm_homeassistant
-            attribute: guest_ip
-            name: Guest IP adres
-          - type: attribute
-            entity: sensor.esxi_vm_homeassistant
-            attribute: snapshots
-            name: Snapshot
-            suffix: Snapshot(s)
-          - type: button
-            icon: mdi:delete-empty
-            name: Alle snapshots opruimen
-            action_name: Delete Snapshots
-            tap_action:
-              action: call-service
-              service: esxi_stats.remove_snapshot
-              service_data:
-                host: vcenter.intern.vanzanten.be
-                vm: homeassistant
-                command: all
-          - type: button
-            icon: mdi:content-save
-            name: Snapshot maken
-            action_name: Maak Snapshot
-            tap_action:
-              action: call-service
-              service: esxi_stats.create_snapshot
-              service_data:
-                host: vcenter.intern.vanzanten.be
-                vm: homeassistant
-                name: Snapshot via HA
-        title: Home Assistant VM
-      - type: entities
-        title: DNS Server
-        entities:
-          - entity: sensor.esxi_vm_dns
-            name: Power State
-          - type: attribute
-            entity: sensor.esxi_vm_dns
-            attribute: status
-            name: Status
-          - type: attribute
-            entity: sensor.esxi_vm_dns
-            attribute: cpu_use_pct
-            name: CPU Usage
-            suffix: '%'
-          - type: attribute
-            entity: sensor.esxi_vm_dns
-            attribute: memory_allocated_mb
-            name: Allocated RAM
-            suffix: MB
-          - type: attribute
-            entity: sensor.esxi_vm_dns
-            attribute: memory_used_mb
-            name: Used RAM
-            suffix: MB
-          - type: attribute
-            entity: sensor.esxi_vm_dns
-            attribute: guest_ip
-            name: Guest IP adres
-          - type: attribute
-            entity: sensor.esxi_vm_dns
-            attribute: snapshots
-            name: Snapshot
-            suffix: Snapshot(s)
-          - type: button
-            icon: mdi:delete-empty
-            name: Alle snapshots opruimen
-            action_name: Delete Snapshots
-            tap_action:
-              action: call-service
-              service: esxi_stats.remove_snapshot
-              service_data:
-                host: vcenter.intern.vanzanten.be
-                vm: dns
-                command: all
-          - type: button
-            icon: mdi:content-save
-            name: Snapshot maken
-            action_name: Maak Snapshot
-            tap_action:
-              action: call-service
-              service: esxi_stats.create_snapshot
-              service_data:
-                host: vcenter.intern.vanzanten.be
-                vm: dns
-                name: Snapshot via HA
+
   - title: Area Test
     path: test2
     badges: []
